fixed some problem with z-index

--- a/src/components/OneLaunch/OneLaunch.scss
+++ b/src/components/OneLaunch/OneLaunch.scss
@@ -9,6 +9,7 @@ div#oneLaunch {
   height: 100%;
   display: flex;
   background-color: rgba($color: #000000, $alpha: 0.95);
+  z-index: 999;
 
   div.main-wrapper {
     border: 2px solid rgb(252, 126, 67);
